<resources>
    <string name="app_name">MixDeDrink</string>
    <string name="default_str">null</string>
    <string name="empty">Empty</string>

    <!-- Search Fragment -->
    <string name="search_fragment_label">Search</string>
    <string name="action_search">Search</string>
    <string name="next">Next</string>
    <string name="desc_search">search</string>
    <string name="desc_clear">clear</string>
    <string name="desc_random">random</string>
    <string name="search_by_hint">Search By:</string>
    <string name="cocktail">Cocktail</string>

    <!-- Recipe Fragment -->
    <string name="recipe_fragment_label">Recipe</string>
    <string name="category">Category:</string>
    <string name="instructions">Instructions:</string>
    <string name="ingredients">Ingredients:</string>
    <string name="glass">Glass:</string>

    <!-- Favorites Fragment -->
    <string name="favorites_fragment_label">Favorites</string>
    <string name="hello_favorites_fragment">Hello Favorites fragment</string>
    <string name="action_favorites">Favorites</string>

    <!-- About Fragment -->
    <string name="about_fragment_label">About</string>
    <string name="action_about">About</string>
    <string name="data_by">Data by: www.thecocktaildb.com</string>
    <string name="dev_by">©LuciaHeredia</string>
    <string name="version">Version: 1.0.0</string>

    <!-- Help Fragment -->
    <string name="help_fragment_label">Help</string>
    <string name="hello_help_fragment">Hello Help fragment</string>
    <string name="action_help">Help</string>

    <!-- Settings Fragment -->
    <string name="action_settings">Settings</string>

</resources>