<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.mixdedrink.MainActivity">

    <item
        android:id="@+id/action_favorites_act"
        android:title="@string/action_favorites"
        android:icon="@drawable/ic_favorites_add"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/favoritesFragment"
        android:title="@string/action_favorites"
        android:icon="@drawable/ic_favorites"
        android:menuCategory="secondary"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_help"
        android:title="@string/action_help"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_about"
        android:title="@string/action_about"
        app:showAsAction="never" />

</menu>